# unittest-parallel-issue-3

./: .gitignore  Makefile  README.md  pyproject.toml
src/mypkg/: __init__.py  mypkg.py
tests/: test_mypkg.py
